Fix common axes logic to detect negated axes as not common

When interpolating rotate3d transforms we were considering axes that are
the negation of each other to be in the same direction.
This patch fixes this mistake by checking the sign of the dot product.

Spec text for rotate3d interpolation:
https://drafts.csswg.org/css-transforms/#ref-for-funcdef-rotate3d-3
For interpolations with the primitive rotate3d(), the direction vectors
of the transform functions get normalized first. If the normalized
vectors are equal, the rotation angle gets interpolated numerically.
Otherwise the transform functions get converted into 4x4 matrices first
and interpolated as defined in section Interpolation of Matrices
afterwards.

BUG=652705

Review-Url: https://codereview.chromium.org/2391003004
Cr-Commit-Position: refs/heads/master@{#423802}

Former-commit-id: b69d3d2ec0d8bd333157dc33f5e1da1eaf76e5fb